# Multi-purpose-rag

./: .gitignore  README.md  app.py  crew_handler.py  process.py  process_doc.py  process_video.py  pyproject.toml  static.py  tools.py
agents/: db_retriever.py  doc_agent.py  gemini_llm.py  llm.py  retriever_agent.py  search.py  video_agent.py  web_agent.py
crew/: doc_crew.py  video_crew.py  web_crew.py
