[tool.poetry]
name = "multi-purpose-rag"
version = "0.1.0"
description = ""
authors = ["Navya <navyac.social@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
langchain-community = "^0.3.12"
langchain = "^0.3.12"
langchain-google-genai = "^2.0.7"
ipykernel = "^6.29.5"
streamlit = "^1.41.1"
pypdf = "^5.1.0"
chromadb = "^0.5.23"
crewai = "^0.86.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
